FIXS - practice areas images on mobile

--- a/styles/base/_helpers.scss
+++ b/styles/base/_helpers.scss
@@ -80,6 +80,20 @@
 	display: block;
 }
 
+.boxlink {
+	display: block;
+	border:1px solid red;
+	height: 100%;
+	position: absolute;
+
+}
+
+.rel {
+	position: relative;
+}
+
+
+
 @media #{$tablet} {
 	.parent {
 		.subtitle {
