--- a/styles/components/_footer.scss
+++ b/styles/components/_footer.scss
@@ -146,7 +146,7 @@ footer {
 			margin-right: 55px;
 		}
 		.signup {
-			padding: 20px 50px 100px;
+			padding: 20px 50px 50px;
 		}
 	}
 
